--- a/src/sass/components/_items.sass
+++ b/src/sass/components/_items.sass
@@ -133,7 +133,8 @@
 	&__content-wrap
 		padding: 18px 50px 20px
 		overflow: hidden
-		height: 100%
+		height: auto
+		min-height: 100%
 		+xs
 			padding: 9px 19px 0 
 	&__slider
