--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -18,6 +18,11 @@ body
 .main
 	overflow: auto
 	height: 100vh
+	font-size: 0
+	& > div
+		font-size: 16px
+		+sm
+			font-size: 15px
 	+sm
 		overflow: hidden
 		height: 100%
