--- a/src/sass/components/_cover.sass
+++ b/src/sass/components/_cover.sass
@@ -5,6 +5,8 @@
 	height: 100%
 	+cover
 	&__content
+		position: relative
+		z-index: 2
 		padding: 25px 125px
 		margin-bottom: 110px
 		width: 100%
@@ -24,6 +26,10 @@
 				font-size: 20px
 			+sm
 				display: none
+		.interiors__slide &
+			margin-bottom: 160px
+			+lg
+				margin-bottom: 205px 
 		+sm 
 			padding: 36px 47px
 			margin: 0
