--- a/src/sass/components/_services.sass
+++ b/src/sass/components/_services.sass
@@ -49,3 +49,29 @@
 			overflow-anchor: initial
 			overflow: initial !important
 			background-color: $wildSand
+	&__info
+		padding: 25px 125px
+		margin-bottom: 110px
+		width: 100%
+		max-width: 700px
+		color: $white
+		background: $black
+		font-family: $book
+		+f(25px, 400, 1.2)
+		text-align: center
+		.services__cover &
+			+xl
+				padding: 25px 60px
+				max-width: 500px
+			+lg
+				padding: 25px 50px
+				max-width: 400px
+				font-size: 20px
+			+sm
+				display: none
+		+sm 
+			padding: 36px 47px
+			margin: 0
+			max-width: none
+			background: rgba($black, 0.7)
+			+f(13px, null, 1.538)
