--- a/src/sass/components/_btn.sass
+++ b/src/sass/components/_btn.sass
@@ -73,6 +73,7 @@
 		+sm
 			font-size: 15px
 	&__icon
+		position: relative
 		margin-right: 10px 
 		width: 38px
 		height: 38px
@@ -87,7 +88,11 @@
 			height: 30px
 			line-height: 30px
 		.icon
-			font-size: 15px
+			position: absolute
+			top: 50%
+			left: 50%
+			margin: -7px 0 0 -7px
+			font-size: 14px
 			vertical-align: middle
 			+sm
 				font-size: 12px
