--- a/src/sass/components/_services.sass
+++ b/src/sass/components/_services.sass
@@ -22,7 +22,7 @@
 		float: right
 		position: relative
 		z-index: 2
-		height: 100vh
+		min-height: 100vh
 		width: 392px
 		&:before
 			position: fixed
@@ -38,12 +38,12 @@
 			+sm
 				display: none
 		+lg
-			height: calc(100vh - 50px)  
+			min-height: calc(100vh - 50px)  
 		+md
 			width: 340px
 		+sm
 			width: 100%
-			height: auto
+			min-height: 0
 			pointer-events: none 
 			touch-action: initial
 			overflow-anchor: initial
