--- a/src/templates/choice.html
+++ b/src/templates/choice.html
@@ -6,7 +6,7 @@ title: Choice
 {% block content %}
 	
 	<div class="items white-scrollbar js-scroll-wrap">
-		<div class="items__content">
+		<div class="items__content js-items-content">
 			{% for item in [
 				{ title: 'Апартаменты с 1 спальней' },
 				{ title: 'Апартаменты с 1 спальней' },
