--- a/src/templates/partials/components/_header.html
+++ b/src/templates/partials/components/_header.html
@@ -19,6 +19,7 @@
 					{% for item in [
 						{ title: 'Апартаменты', classList: 'is-active' },
 						{ title: 'Интерьеры' },
+						{ title: 'Видео' },
 						{ title: 'Услуги и Сервис' },
 						{ title: 'Расположение' }
 					] %}
