--- a/src/templates/video.html
+++ b/src/templates/video.html
@@ -5,35 +5,31 @@ title: Video
 
 {% block content %}
 	
-	<div class="services" style="min-height:100%">
-			<div class="interiors js-interiors">
-				<button class="interiors__arrow interiors__prev interiors__scroll-to js-interiors-scroll-to" data-direction="prev">
-					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14.2 23.5" style="width: 0.604em; height: 1em;" class="interiors__icon"><path fill="currentColor" d="M13.7 3.2l-8.5 8.6 8.5 8.6c.7.7.7 1.9 0 2.6-.7.7-1.9.7-2.6 0L0 11.7 11.1.5c.7-.7 1.9-.7 2.6 0 .7.8.7 1.9 0 2.7z"/></svg>
-				</button>
-				<button class="interiors__arrow interiors__next interiors__scroll-to js-interiors-scroll-to" data-direction="next">
-					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14.2 23.5" style="width: 0.604em; height: 1em;" class="interiors__icon"><path fill="currentColor" d="M.5.5c.7-.7 1.9-.7 2.6 0l11.1 11.2L3.1 22.9c-.7.7-1.9.7-2.6 0-.7-.7-.7-1.9 0-2.6L9 11.7.5 3.1C-.2 2.4-.2 1.3.5.5z"/></svg>
-				</button>
-				<div class="interiors__slider white-scrollbar js-interiors-slideshow">
-					{% for item in range(0,3) %}
-						<div class="interiors__slide" data-index="{{loop.index}}">
-							<div class="interiors__background cover" style="background-image: url(img/interiors.jpg);">
-								<div class="cover__content">
-									<p>Посуточная аренда лучших аппартаментов в Москва-Сити по версии International Property Awards </p>
-								</div>
-							</div>
-						</div>
-					{% endfor %}
+<div class="video">
+	<div class="interiors js-interiors">
+		<button class="interiors__arrow interiors__prev interiors__scroll-to js-interiors-scroll-to" data-direction="prev">
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14.2 23.5" style="width: 0.604em; height: 1em;" class="interiors__icon"><path fill="currentColor" d="M13.7 3.2l-8.5 8.6 8.5 8.6c.7.7.7 1.9 0 2.6-.7.7-1.9.7-2.6 0L0 11.7 11.1.5c.7-.7 1.9-.7 2.6 0 .7.8.7 1.9 0 2.7z"/></svg>
+		</button>
+		<button class="interiors__arrow interiors__next interiors__scroll-to js-interiors-scroll-to" data-direction="next">
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14.2 23.5" style="width: 0.604em; height: 1em;" class="interiors__icon"><path fill="currentColor" d="M.5.5c.7-.7 1.9-.7 2.6 0l11.1 11.2L3.1 22.9c-.7.7-1.9.7-2.6 0-.7-.7-.7-1.9 0-2.6L9 11.7.5 3.1C-.2 2.4-.2 1.3.5.5z"/></svg>
+		</button>
+		<div class="interiors__slider white-scrollbar js-interiors-slideshow">
+			{% for item in range(0,3) %}
+				<div class="interiors__slide" data-index="{{loop.index}}">
+					<a href="img/video-bg.jpg" class="video-fancy js-fancybox" style="background-image: url(img/video-bg.jpg);">
 				</div>
-				<div class="interiors__thumbnails js-scroll-wrap js-interiors-thumbnails">
-					<div class="interiors__thumbnails-in">
-						{% for item in range(0,3) %}
-							<div class="interiors__thumbnail" data-index="{{loop.index}}">
-								<div class="interiors__preview" style="background-image: url(img/interiors.jpg);"></div>
-							</div>
-						{% endfor %}
+			{% endfor %}
+		</div>
+		<div class="interiors__thumbnails js-scroll-wrap js-interiors-thumbnails">
+			<div class="interiors__thumbnails-in">
+				{% for item in range(0,3) %}
+					<div class="interiors__thumbnail" data-index="{{loop.index}}">
+						<div class="interiors__preview" style="background-image: url(img/video-bg.jpg);"></div>
 					</div>
-				</div>
+				{% endfor %}
 			</div>
+		</div>
 	</div>
+</div>
 
 {% endblock %}
