--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,6 +1,7 @@
 @import helpers/all
 @import generated/sprite-svg
 @import lib/slick
+@import './node_modules/@fancyapps/fancybox/dist/jquery.fancybox'
 @import ./node_modules/perfect-scrollbar/css/perfect-scrollbar
 @import ./node_modules/owl.carousel/dist/assets/owl.carousel
 @import common
