--- a/src/sass/components/_interiors.sass
+++ b/src/sass/components/_interiors.sass
@@ -33,6 +33,9 @@
 		display: flex
 		align-items: flex-end
 		+cover
+		+hover
+			.btn-play
+				transform: translate(-50%,-50%) scale(1.3)
 		+sm 
 			bottom: 0
 			padding-bottom: 54px
@@ -109,6 +112,8 @@
 		&.is-active
 			.interiors__preview
 				opacity: 1
+			.btn-play_sm
+				display: none
 	&__preview
 		border-radius: 4px
 		width: 127px
@@ -117,8 +122,11 @@
 		+cover
 		cursor: pointer
 		transition: opacity 0.3s
+		position: relative
 		+hover
 			opacity: 1
+			.btn-play_sm
+				transform: translate(-50%,-50%) scale(1.3)
 	&__arrow
 		position: absolute
 		z-index: 30
