--- a/src/templates/video.html
+++ b/src/templates/video.html
@@ -5,7 +5,7 @@ title: Video
 
 {% block content %}
 	
-<div class="video">
+<div class="video" style="min-height: 100%">
 	<div class="interiors js-interiors">
 		<button class="interiors__arrow interiors__prev interiors__scroll-to js-interiors-scroll-to" data-direction="prev">
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14.2 23.5" style="width: 0.604em; height: 1em;" class="interiors__icon"><path fill="currentColor" d="M13.7 3.2l-8.5 8.6 8.5 8.6c.7.7.7 1.9 0 2.6-.7.7-1.9.7-2.6 0L0 11.7 11.1.5c.7-.7 1.9-.7 2.6 0 .7.8.7 1.9 0 2.7z"/></svg>
@@ -16,7 +16,9 @@ title: Video
 		<div class="interiors__slider white-scrollbar js-interiors-slideshow">
 			{% for item in range(0,3) %}
 				<div class="interiors__slide" data-index="{{loop.index}}">
-					<a href="img/video-bg.jpg" class="video-fancy js-fancybox" style="background-image: url(img/video-bg.jpg);">
+					<a href="https://www.youtube.com/watch?v=_sI_Ps7JSEk" class="interiors__background cover js-fancybox" style="background-image: url(img/video-bg.jpg);">
+						<span class="btn-play">{{mixins.icon('play')}}</span>
+					</a>
 				</div>
 			{% endfor %}
 		</div>
@@ -24,7 +26,9 @@ title: Video
 			<div class="interiors__thumbnails-in">
 				{% for item in range(0,3) %}
 					<div class="interiors__thumbnail" data-index="{{loop.index}}">
-						<div class="interiors__preview" style="background-image: url(img/video-bg.jpg);"></div>
+						<div class="interiors__preview" style="background-image: url(img/video-bg.jpg);">
+							<span class="btn-play btn-play_sm">{{mixins.icon('play')}}</span>
+						</div>
 					</div>
 				{% endfor %}
 			</div>
