--- a/src/sass/components/_btn.sass
+++ b/src/sass/components/_btn.sass
@@ -110,6 +110,10 @@
 	font-size: 64px
 	line-height: 1
 	transition: transform .3s
+	+sm
+		width: 40px
+		height: 40px
+		font-size: 40px
 	&_sm
 		width: 24px
 		height: 24px
