video style fix

--- a/src/templates/video.html
+++ b/src/templates/video.html
@@ -5,7 +5,7 @@ title: Video
 
 {% block content %}
 	
-<div class="video" style="min-height: 100%">
+<div class="video">
 	<div class="interiors js-interiors">
 		<button class="interiors__arrow interiors__prev interiors__scroll-to js-interiors-scroll-to" data-direction="prev">
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14.2 23.5" style="width: 0.604em; height: 1em;" class="interiors__icon"><path fill="currentColor" d="M13.7 3.2l-8.5 8.6 8.5 8.6c.7.7.7 1.9 0 2.6-.7.7-1.9.7-2.6 0L0 11.7 11.1.5c.7-.7 1.9-.7 2.6 0 .7.8.7 1.9 0 2.7z"/></svg>
